1999-08-09  Ian Lance Taylor  <ian@zembu.com>

	* binutils-all/objcopy.exp: Add setup_xfail for simple copy test
	for i*86-*-msdos*.

1999-07-21  H.J. Lu  <hjl@gnu.org>

	* binutils-all/testprog.c: Include <stdio.h>.

1999-06-29  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/objdump.exp: Add fr30 and MCore to expected cpus
	list. 

	* binutils-all/readelf.r: Do not assume a fixed number of spaces
	in the output.

1999-06-10  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/readelf.wi: Update to match latest output.
	* binutils-all/readelf.h: Update to match latest output.

Wed Jun  9 11:59:22 1999  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* binutils-all/objdump.exp: Tighten regexp to match `objdump -i'
	output to avoid massive exponential behaviour.

1999-05-28  Ian Lance Taylor  <ian@zembu.com>

	* binutils-all/readelf.h: Update for changes of 1999-04-08.

1999-03-12  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/readelf.wi: Remove FR30 specific componnts.
	* binutils-all/readelf.s: Remove RELA specific components.

1999-02-16  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/readelf.s: Do not assume section alignment is 4.
	* binutils-all/readelf.r: Do not assume rela's are being used. 
	* binutils-all/readelf.exp: disable tests for non ELF based
	targets.

1999-02-02  Nick Clifton  <nickc@cygnus.com>

	* binutils-all/readelf.wi: Amend to match new readelf output.
	* binutils-all/readelf.r: Do not assume that RELAs will be used.

1999-01-29  Nick Clifton  <nickc@cygnus.com>

	* config/default.exp: Add definitions of READELF and READELFFLAGS.

	* binutils-all/readelf.exp: New file: Readelf tests
	* binutils-all/readelf.h: New file: Expected results for 'readelf -h'
	* binutils-all/readelf.s: New file: Expected results for 'readelf -S'
	* binutils-all/readelf.ss: New file: Expected results for 'readelf -s'
	* binutils-all/readelf.r: New file: Expected results for 'readelf -r'